# ai-podcast-generator

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: podcast.py
backend/app/core/: config.py
backend/app/models/: podcast.py
backend/app/services/: openai_service.py  tts_service.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.vue  api.ts  style.css
frontend/src/components/: PodcastForm.vue  PodcastList.vue
frontend/src/stores/: podcasts.ts
